Created route for auth

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URL = mongodb+srv://davi:davi123@eccommerce.5g4va.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 PORT = 5002
+PASS_SEC = davidev
+JWT_SEC = davidev
